use resx + add unit tests + refactor some code

--- a/src/Integration/Connection/UI/OrganizationSelectionWindow.xaml
+++ b/src/Integration/Connection/UI/OrganizationSelectionWindow.xaml
@@ -43,7 +43,7 @@
     <!--  Design  -->
     <StackPanel Style="{StaticResource DialogContent}">
         <TextBlock Margin="0,0,0,8"
-                   FontStyle="Italic" Text="This SonarQube server supports organizations, please select the organization you want to bind to." TextWrapping="Wrap" />
+                   FontStyle="Italic" Text="Please select the organization you want to bind to." TextWrapping="Wrap" />
 
         <StackPanel Orientation="Horizontal">
             <TextBlock VerticalAlignment="Center" Text="Organizations" />
