--- a/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
+++ b/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
@@ -14,7 +14,6 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -44,17 +43,20 @@
                    Text="SonarLint can also analyze JavaScript, C and C++ files. After installing the support for these languages, it will be activated for newly opened files. Note that it doesn't benefit from the connected mode for now."
                    Margin="5" TextWrapping="Wrap" />
 
-        <TextBlock Grid.Row="2"
-                   Text="Verbosity of the SonarLint daemon logs displayed in the SonarLint Output:"
-                   Margin="5" TextWrapping="Wrap" Grid.ColumnSpan="2" />
+        <StackPanel x:Name="VerbosityPanel" Grid.Row="2" Grid.ColumnSpan="2">
 
-        <ComboBox x:Name="DaemonVerbosity" Grid.Row="3" VerticalAlignment="Top" SelectedIndex="2" Grid.ColumnSpan="2" HorizontalContentAlignment="Stretch" Margin="0,0,0,5"/>
+            <TextBlock Grid.Row="0"
+                       Text="Verbosity of the SonarLint daemon logs displayed in the SonarLint Output:"
+                       Margin="5" TextWrapping="Wrap" />
 
-        <CheckBox Grid.ColumnSpan="2" Grid.Row="4"
+            <ComboBox x:Name="DaemonVerbosity" Grid.Row="1" VerticalAlignment="Top" SelectedIndex="2" HorizontalContentAlignment="Stretch" Margin="0,0,0,5"/>
+        </StackPanel>
+
+        <CheckBox Grid.ColumnSpan="2" Grid.Row="3"
                   x:Name="ShowServerNuGetTrustWarning"
                   Content="Display a warning about NuGet packages" />
 
-        <TextBlock Grid.ColumnSpan="2" Grid.Row="5"
+        <TextBlock Grid.ColumnSpan="2" Grid.Row="4"
                    Text="Display a warning about automatically downloading NuGet packages when establishing a SonarQube server connection."
                    Margin="20,5,10,5" TextWrapping="Wrap" />
 
