--- a/src/Integration.Vsix/SonarLintDaemon/SonarLintDaemonInstaller.xaml
+++ b/src/Integration.Vsix/SonarLintDaemon/SonarLintDaemonInstaller.xaml
@@ -5,6 +5,8 @@
         ContentRendered="Window_ContentRendered" WindowStyle="SingleBorderWindow"
         WindowStartupLocation="CenterScreen" Topmost="True" SizeToContent="WidthAndHeight" >
     <StackPanel Margin="5">
+        <TextBlock Text="Downloading latest version of SonarLint additionnal languages..."
+                   HorizontalAlignment="Left" Margin="0,5"/>
         <ProgressBar x:Name="ProgressBar" Minimum="0" Maximum="100" Height="20" Visibility="Visible"/>
         <TextBlock x:Name="CompletedMessage" Text="Additional languages support is installed and activated!"
                    HorizontalAlignment="Left" Visibility="Collapsed" Margin="0,5"/>
